# PigproFarm

./: CMakeLists.txt  README.md
data/: pigs.csv
docs/: CMakeLists.txt  decisions.md  main.cpp  product_brief.md  risks.md  toolchain.md
docs/docs/: toolchain.md
docs/interviews/: interview_script.md
docs/src/: database.cpp  main.cpp
docs/wireframes/: README.md
scripts/: setup_linux.sh  setup_windows.ps1
src/: database.h  main.cpp
tests/: test_main.cpp
workflows/: ci.yml
